feat/users, modulo de usuarios implementado com sucesso.
