# src/server.js
@@ -5,6 +5,7 @@ import mongoConfig from "./config/mongo.config.js";
 import swaggerUi from "swagger-ui-express";
 import swaggerJsDoc from "../swagger.json" assert { type: "json" };
 import authRouter from "./auth/auth.router.js";
+import userRouter from "./users/user.router.js";
 
 const app = express();
 
@@ -12,6 +13,7 @@ app.use(express.json());
 app.use(cors());
 app.use(express.urlencoded({ extended: true }));
 app.use("/", authRouter);
+app.use("/users", userRouter);
 app.use("/api", swaggerUi.serve, swaggerUi.setup(swaggerJsDoc));
 
 mongoConfig();
